--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "express": "^5.1.0",
     "mssql": "^11.0.1",
-    "socket.io": "^4.8.1"
+    "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.8.1",
+    "typeorm": "^0.3.24"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
