--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kamban",
+  "name": "kanban",
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,9 +10,13 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.1",
+    "morgan": "^1.10.0",
     "mssql": "^11.0.1",
     "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
